--- a/event.css
+++ b/event.css
@@ -79,9 +79,14 @@
     border: 1px solid black;
     width: 25%;
     height: 550px;
-    margin-left: 80px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 5px black;
+    margin-left: 75px;
+    border-radius: 30px;
+    box-shadow: 15px 15px 15px black;
+}
+.head3 img{
+    margin-left: 12px;
+    margin-top: 10px;
+    border-radius: 20px;
 }
 .head3a p{
     margin-left: 20px;
